         code from fuzegiz (thanks, sweetlilmr) (Fred).
20080528 mempool.c,debugger/event.c: add <string.h> for string prototypes
         (Fred).
20080529 z80/tests/tests.expected: update tests for improved repeated
         I/O instruction emulation.
20080529 z80/{coretest.c,tests/tests.expected}: change coretest driver to
         make fake IO ports return different values.
20080530 z80/{coretest.c,tests/tests.expected}: change the value printed
	 as well as the value returned.
20080530 z80/tests/{tests.expected,tests.in}: add new tests for improved
	 {IN,OUT}[DI] flag emulation.
20080601 divide.c,if1.c,periph.c,periph.h,tape.c,zxatasp.c,zxcf.c: add
	 debugger events for tape stop and peripheral page/unpage.
20080603 unittests/unittests.c: mempool unit test was failing as the
         debugger had created a memory pool.
20080603 debugger/{breakpoint.c,commandl.l,commandy.y,debugger_internals.h,
	 event.c},fuse.c,settings.dat: allow debugger commands to be
	 specified on the command line. A side-effect is allowing multiple
	 debugger commands separated by newlines in one call to the parser,
	 and also fix the fact that event breakpoints didn't pay attention
	 to ignore counts, conditions or lifetime.
20080604 debugger/commandl.l: allow event strings to include numbers
         (necessary for if1 events to work...)
20080606 ui/widget/debugger.c: handle event breakpoints in display.
20080607 mempool.c: print error message if we couldn't initialise pools.
20080607 debugger/{breakpoint.c,breakpoint.h,commandl.l,commandy.y,
	 debugger_internals.h,event.c},memory.c,periph.c,ui/gtk/debugger.c:
	 add facility to run debugger commands when a breakpoint is hit.
20080608 debugger/{Makefile.am,commandl.l,commandy.y,debugger.c,
	 debugger_internals.h,expression.c}: add numeric debugger variables
20080608 debugger/debugger.c: a breakpoint command could have disabled the
	 debugger before the UI is brought up.